# esai-systematic-benchmark-collection

./: .env.example  .gitattributes  .gitignore  HUGGINGFACE_DATASET_SCHEMA.md  INTEGRATION_WORKFLOW.md  METHODOLOGY.md  README.md  SCHEMA.md  SOURCE_ADAPTERS.md  openreview_collect.py  openreview_common.py  openreview_validate.py  pyproject.toml
.github/workflows/: ci.yml
esai_collection/: __init__.py  acl_source.py  citations.py  cli.py  dataset_v1.py  enrichment.py  hf_dataset.py  hf_discovery.py  http.py  io.py  openreview_source.py  pmlr_source.py  provenance.py  recall.py  schema.py  screening.py  sheet_package.py  text.py
scripts/: analyze_eu_risks.py  build_complai_fig1_replica.py  build_dataset_v1.py  build_framework_figure.py  build_sankey.py  build_team_csv.py  citation_report.py  enrich_crossref.py  enrich_s2bulk.py  extract_system_cards.py  validate_dataset_v1.py
tests/: test_acl_source.py  test_citations.py  test_cli_dotenv.py  test_dataset_v1.py  test_enrichment.py  test_hf_dataset.py  test_hf_discovery.py  test_openreview_source.py  test_pmlr_source.py  test_provenance.py  test_recall.py  test_schema.py  test_screening.py  test_sheet_package.py
